--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,26 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Touchscreen optimizations for Raspberry Pi */
+@layer base {
+  * {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0.1);
+    -webkit-touch-callout: none;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  button, 
+  [role="button"],
+  .cursor-pointer {
+    touch-action: manipulation;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    min-height: 44px;
+    min-width: 44px;
+  }
+}
+
 /* === Base Styles === */
 @layer base {
   body {
